--- a/survey/readme
+++ b/survey/readme
@@ -1,12 +1,17 @@
-(https://witchdevelops.github.io/survey/)
+# About
+This project was designed and developed during the FreeCodeCamp web development bootcamp, designed and developed by me, based on the required features. It is my very first project.
 
-This project was designed and developed during the FreeCodeCamp web development bootcamp, designed and developed by me, based on the required features.
+# Link
+[See the project here](https://witchdevelops.github.io/survey/)
 
-(still needs some work)
-
-Features:
+# Features
 - responsive design,
 - form validation,
 - hover and active states for the "Submit" button,
 - "Submit" button in the language you're using in your browser,
 - visual effects like dropshadow and consistent color palette.
+
+# TO DO
+* fix the radio buttons
+* fix the checkboxes
+* overall visual changes
