--- a/survey/readme
+++ b/survey/readme
@@ -1,10 +1,14 @@
 # About
-This project was designed and developed during the FreeCodeCamp web development bootcamp, designed and developed by me, based on the required features. It is my very first project.
+
+This project was designed and developed during the FreeCodeCamp web development bootcamp, designed and developed by me, based on the required features. 
+It is my very first project.
 
 # Link
+
 [See the project here](https://witchdevelops.github.io/survey/)
 
 # Features
+
 - responsive design,
 - form validation,
 - hover and active states for the "Submit" button,
@@ -12,6 +16,7 @@ This project was designed and developed during the FreeCodeCamp web development 
 - visual effects like dropshadow and consistent color palette.
 
 # TO DO
+
 * fix the radio buttons
 * fix the checkboxes
 * overall visual changes
